--- a/main.tex
+++ b/main.tex
@@ -21,8 +21,8 @@
 
 \section{Capítulo I: Introducción}
 
-\begin{itemize}
-  \item Magnitud (\(X\)): se mide en la unidad física (V,A,\(\Omega\)).
+\begin{enumerate}
+  \item Magnitud (\(X\)): se mide en la unidad física (V,A,\(\Omega\)). Usualmente en literatura ingenieril, se utiliza la letra \(U\) para hablar de diferencia de potencial (o tensión).
 
   \item Sensibilidad de un instrumento: Relación efecto/causa. Esto se refiere puramente a la transferencia del dispositivo. Causa es la magnitud física que quiere medir (\(X\)). Por ejemplo: Tensión, Corriente o Temperatura. Efecto es la respuesta observable del instrumento (\(Y\)). Por ejemplo desplazamiento de la aguja en \texttt{mm}.
     \[
@@ -39,7 +39,7 @@
       S=\frac{\delta \alpha}{\delta I}
     \end{equation}
 
-    Por otro lado, si la deflexión responde a una ley alineal, entonces el cociente \ref{eq_sensibilidad_constante} no es constante y varía punto a punto, donde su expresión matemática será 
+    Por otro lado, si la deflexión responde a una ley alineal, entonces el cociente \eqref{eq_sensibilidad_constante} no es constante y varía punto a punto, donde su expresión matemática será 
     \[
       \lim_{\Delta I \to 0} \frac{\Delta \alpha}{\Delta I} \approx \frac{d\alpha}{dI}
     \]
@@ -48,7 +48,7 @@
     
   \item Medir: Significa comparar una magnitud correspondiente con una unidad apropiada. El valor de la medida queda expresado como el producto entre el valor medido y la unidad correspondiente.
 
-  \item Deflexión (\(\alpha\)): Cantidad de divisiones o grados que se desvía la aguja indicadora sobre una escala de un determinado instrumento. La deflexión suele ser un ángulo de giro. Se denomina \(\alpha\) al valor actual en donde se detiene la aguja y \(\alpha_\text{max}\) al límite físico del instrumento (fondo de la escala).
+  \item Deflexión (\(\alpha\)): Cantidad de divisiones o grados que se desvía la aguja indicadora sobre una escala de un determinado instrumento. La deflexión suele ser un ángulo de giro o la cantidad de divisiones que ha recorrido la aguja. Se denomina \(\alpha\) al valor actual en donde se detiene la aguja y \(\alpha_\text{max}\) al límite físico del instrumento (fondo de la escala).
 
     Un ejemplo: si tiene un voltímetro con una escala de 0 a 50 divisiones y lo usa para medir en un rango de 0 a 500V, \(\alpha_{\text{max}}=50\)div. Si al realizar una medida la aguja se clava a la mitad, la \emph{deflexión} es de 25, consecuentemente la lectura será de 250V.
 
@@ -66,7 +66,7 @@
 
   \item Rango de medida: Se define así al tramo de la escala en el cuadrante donde las medidas son confiables. 
     \[
-      \text{Rango de medida} = [X_{\text{max}},X_{\text{min}}]
+      \text{Rango de medida} = [X_{\text{min}},X_{\text{max}}]
     \]
     El valor máximo del rango de medida (máxima magnitud: \(X_{\text{max}}\)) queda definido como el \emph{alcance} del instrumento. 
 
@@ -75,14 +75,14 @@
     Si el instrumento responde a una ley de deflexión lineal, entonces el rango de medida será coincidente con el alcance. Para instrumentos cuya ley de deflexión es cuadrática, la escala será lineal. De modo que el fabricante tratará (mediante dispositivos constructivos) de que sea así. No obstante, estos últimos aparatos suelen representar los primeros valores de la escala de forma comprimida, debido a la imposibilidad de su correcta calibración. Así, el alcance del instrumento no considera correctas (o con la exactitud dada por la clase) a los primeros valores más comprimidos. 
 
   \item Rango de deflexión: similar al rango de medida, pero relacionado a la deflexión. Se define como 
-    \[\text{Rango de deflexión}=[\alpha_\text{max},\alpha_\text{min}]\]
+    \[\text{Rango de deflexión}=[\alpha_\text{min},\alpha_\text{max}]\]
     Así, corresponde a el movimiento que puede tener la aguja del instrumento sobre el cuadrante.
 
     No necesariamente el rango de deflexión y el rango de medida coinciden en su totalidad. Algunos instrumentos presentan un pequeño desborde al llegar a los límites de deflexión, garantizando ser precisos en el rango de medida.
 
   \item Margen de la indicación: Toda la escala del cuadrante.
 
-  \item Constante de lectura: Se define como el cociente entre el alcance \(X_{\text{max}}\) y la máxima deflexión en divisiones (\(\alpha_{\text{max}}\)).
+  \item Constante de lectura: Se define como el cociente entre el alcance (\(X_{\text{max}}\)) y la máxima deflexión en divisiones (\(\alpha_{\text{max}}\)).
     \[
       C_E = \frac{\text{Alcance}}{\alpha_{max}}
     \]
@@ -90,6 +90,11 @@
     \[
       X_{\text{medido}} = \alpha \, C_E
     \]
-\end{itemize}
-  
+
+  \item Consumo propio: Es la potencia absorbida por el propio instrumento para provocar su propia deflexión. Un voltímetro tendrá idealmente una resistencia infinita. Un amperímetro, idealmente, tendrá una resistencia nula. 
+
+    Un voltímetro es conectado usualmente en paralelo. Así, su potencia de consumo será menor siempre que la resistencia sea mayor: \(P=\frac{U^2}{R}\). Para un amperímetro, que se conecta en serie, su potencia de consumo será menor siempre y cuando la resistencia sea menor: \(P=I^2R\)\footnote{Recuerde que \(U\) representa la tensión.}.
+
+\end{enumerate}
+
 \end{document}
