add(chpt1):mingraph

--- a/main.bib
+++ b/main.bib
@@ -2,7 +2,7 @@
   author = {Anci, Elio Valentino},
   title = {Física II},
   year = {2025},
-  url = {https://github.com/EVAnci/fisica_II},
+  url = {https://github.com/EVAnci/fisica_II/releases/},
   urldate = {2026-01-29},
   note = {Repositorio en GitHub},
   publisher = {Auto-publicado}
