add(chpt1): ampere unit

--- a/preamble.tex
+++ b/preamble.tex
@@ -20,6 +20,7 @@
 
 % Math stuff
 \usepackage{amsmath}
+\usepackage{amssymb}
 
 % Colors
 \usepackage{xcolor}
@@ -49,6 +50,7 @@
 
 % captions and references
 \usepackage{caption}
+\usepackage{subcaption}
 
 % pgfplots and tikz for graphs
 \usepackage[mode=buildnew]{standalone}
