add(chpt1): units

--- a/preamble.tex
+++ b/preamble.tex
@@ -21,6 +21,7 @@
 % Math stuff
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{amsthm}
 
 % Colors
 \usepackage{xcolor}
@@ -64,3 +65,10 @@
 \pgfplotsset{compat=1.18}
 
 \usepackage{tcolorbox}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Custom envs
+
+\theoremstyle{definition}
+\newtheorem{definition}{Definición}[section]
