fix(chpt1): reorganizacion del contenido

--- a/preamble.tex
+++ b/preamble.tex
@@ -65,6 +65,7 @@
 \pgfplotsset{compat=1.18}
 
 \usepackage{tcolorbox}
+\tcbuselibrary{breakable}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
