--- a/main.bib
+++ b/main.bib
@@ -7,3 +7,11 @@
   note = {Repositorio en GitHub},
   publisher = {Auto-publicado}
 }
+
+@book{electrotecnia_matthew,
+  author = {Sadiku, Matthew and Alexander, Charles},
+  title = {Fundamentos de circuitos eléctricos},
+  year = {2013},
+  editor = {Maritn del Campo, Francisco and Vera Bermudez, Aristeo and Cordero Pedraza, Carlos Roberto},
+  publisher = {McGraw-Hill Interamericana}
+}
