add(chp1):borrador

--- a/preamble.tex
+++ b/preamble.tex
@@ -67,6 +67,8 @@
 \usepackage{tcolorbox}
 \tcbuselibrary{breakable}
 
+\usepackage{tabularx}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Custom envs
