add(chpt1): almost finish

--- a/main.bib
+++ b/main.bib
@@ -8,6 +8,16 @@
   publisher = {Auto-publicado}
 }
 
+@book{c4elio,
+  author = {Anci, Elio Valentino},
+  title = {Cálculo IV},
+  year = {2025},
+  url = {https://github.com/EVAnci/calculo_iv/releases/},
+  urldate = {2026-01-29},
+  note = {Repositorio en GitHub},
+  publisher = {Auto-publicado}
+}
+
 @book{electrotecnia_matthew,
   author = {Sadiku, Matthew and Alexander, Charles},
   title = {Fundamentos de circuitos eléctricos},
