fix(main): create a print.tex file which has the printing format

--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,4 @@
-% This is the standard option. For better reading experience, prefer this.
-% \documentclass{report}
-
-% For save paper, print with this options if you want
-% Obviosly comment the first line.
-\documentclass[12pt,a4paper]{report}
-\usepackage[left=1.5cm, right=1.5cm, top=2cm, bottom=2cm]{geometry}
+\documentclass{report}
 
 \input{preamble.tex}
 
