add(chpt2): almost finish!

--- a/main.bib
+++ b/main.bib
@@ -4,7 +4,6 @@
   year = {2025},
   url = {https://github.com/EVAnci/fisica_II/releases/},
   urldate = {2026-01-29},
-  note = {Repositorio en GitHub},
   publisher = {Auto-publicado}
 }
 
@@ -14,7 +13,14 @@
   year = {2025},
   url = {https://github.com/EVAnci/calculo_iv/releases/},
   urldate = {2026-01-29},
-  note = {Repositorio en GitHub},
+  publisher = {Auto-publicado}
+}
+
+@book{anelio,
+  author = {Anci, Elio Valentino},
+  title = {Análisis Numérico},
+  year = {2026},
+  url = {https://github.com/EVAnci/analisis_numerico/releases/},
   publisher = {Auto-publicado}
 }
 
