add(chpt3): start with ipbm

--- a/print.tex
+++ b/print.tex
@@ -18,6 +18,8 @@
 \tableofcontents
 
 \include{chapters/1_unit/main}
+\include{chapters/2_unit/main}
+\include{chapters/3_unit/main}
 
 \printbibliography
 
