add(portrait): cool portrait xd

--- a/main.tex
+++ b/main.tex
@@ -2,11 +2,22 @@
 
 \input{preamble.tex}
 
-\title{Instrumentos y mediciones}
-\author{Elio Valentino Anci}
-
 \begin{document}
-\maketitle
+
+\begin{titlepage}
+  \centering
+  \vspace*{\fill}
+  {\Huge \ttfamily Instrumentos y mediciones \par}
+  \vspace{2cm}
+  \begin{figure}[ht]
+    \centering
+    \includegraphics[height=5cm]{media/portrait.jpg}
+  \end{figure}
+  \vspace{2cm}
+  {\large \itshape Elio Valentino Anci \par}
+  {\small\today\par}
+  \vspace*{\fill}
+\end{titlepage}
 
 \tableofcontents
 
